# lanobot

./: .gitignore  CLAUDE.md  README.md  config.json  lanobot系统架构分析报告.md  main.py  pyproject.toml  temp_imports.py  test_agent_llm.py  test_custom_nodes.py  test_rag_router.py  test_session_commands.py
.claude/: settings.local.json
.claude/plan/: phase7-session-management.md  phase9-integration.md
bus/: __init__.py  events.py  queue.py
bus/channels/: __init__.py  base.py  dingtalk.py  discord.py  feishu.py  manager.py  qq.py  slack.py  telegram.py  wecom.py  whatsapp.py
cli/: __init__.py  wizard.py
cli/commands/: __init__.py  channel.py  config.py  doctor.py  init.py  run.py  session.py  tool.py
config/: __init__.py  loader.py  paths.py  schema.py
cron/: __init__.py  service.py  types.py
framework/: README.md
heartbeat/: __init__.py  service.py
lanobot/: __init__.py
lanobot/agent/: __init__.py  graph.py  middleware.py  nodes.py  prompt.py  router.py  state.py
lanobot/cli/: repl.py
lanobot/cli/components/: __init__.py  (+4 more)
lanobot/memory/: __init__.py  checkpointer.py  history.py  rag.py  store.py
lanobot/providers/: __init__.py  base.py  factory.py  langchain_wrapper.py  registry.py
lanobot/templates/: AGENTS.md  SOUL.md  TOOLS.md  USER.md
lanobot/tools/: __init__.py  base.py  cron.py  filesystem.py  mcp.py  message.py  registry.py  shell.py  spawn.py  web.py
plan/: cli-enhancement-v2.md  构建计划.md
session/: __init__.py  manager.py  types.py
test_persist_workspace/sessions/: cli_persist1.jsonl  cli_persist2.jsonl
tests/test_agent/: __init__.py  test_graph.py  test_prompt.py
tests/test_bus/: __init__.py  test_events.py  test_queue.py
tests/test_config/: __init__.py  test_loader.py  test_paths.py  test_schema.py
tests/test_memory/: __init__.py  test_checkpointer.py  test_history.py  test_store.py
tests/test_providers/: test_factory.py  test_registry.py
tests/test_session/: test_session.py
tests/test_tools/: __init__.py  test_base.py  test_cron.py  test_filesystem.py  test_message.py  test_registry.py  test_shell.py  test_spawn.py  test_web.py
workspace/: HEARTBEAT.md
workspace/knowledge/: lanobot.txt  lanobot_guide.txt  project.txt
workspace/sessions/: cli_default.jsonl  test_123.jsonl  test_chat456.jsonl
