[project]
name = "lanobot"
version = "0.1.0"
description = "超轻量级个人AI助手 - 基于 LangChain"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "lanobot contributors"}
]
keywords = ["ai", "agent", "chatbot", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Pydantic
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # LangChain 1.2 核心 (使用 <2.0 允许 minor 版本更新)
    "langchain>=1.2.0,<2.0",
    "langchain-core>=1.2.0,<2.0",
    "langchain-openai>=0.1.0,<2.0",
    "langchain-anthropic>=0.1.0,<2.0",

    # LangGraph (状态流/持久化)
    "langgraph>=1.0.0,<2.0",

    # LLM 提供商
    "httpx>=0.28.0",
    "openai>=2.0.0",

    # 日志
    "loguru>=0.7.0",

    # 通道依赖
    "websockets>=16.0",
    "websocket-client>=1.9.0",

    # 飞书 SDK
    "lark-oapi>=1.5.0",

    # QQ SDK
    "qq-botpy>=1.2.0",

    # MCP
    "mcp>=1.26.0",

    # 工具类
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.1.0",
    "httpx>=0.28.0",
]

qq = [
    "qq-botpy>=1.2.0",
]

feishu = [
    "lark-oapi>=1.5.0",
]

mcp = [
    "mcp>=1.26.0",
]

[project.scripts]
lanobot = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
source = ["lanobot", "config", "bus"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]